# lacsap

./: .gitignore  CMakeLists.txt  LICENSE.txt  Makefile  README.md
cmake/: CompilerWarnings.cmake  Doxygen.cmake  StandardProjectSettings.cmake
demo/: sieve.pas
docs/: CMakeLists.txt
runtime/: CMakeLists.txt  alloc.c  array.c  assign.c  clock.c  fileio.c  getput.c  main.c  math.c  panic.c  params.c  rangeerror.c  read.c  readbin.c  runtime.h  set.c  string.c  val.c  write.c  writebin.c
src/: CMakeLists.txt  binary.cpp  binary.h  builtin.cpp  builtin.h  callgraph.cpp  callgraph.h  constants.cpp  constants.h  expr.cpp  expr.h  lacsap.cpp  lexer.cpp  lexer.h  location.cpp  location.h  namedobject.cpp  namedobject.h  options.h  parser.cpp  parser.h  semantics.cpp  semantics.h  source.cpp  source.h  stack.cpp  stack.h  token.cpp  token.h  trace.cpp  trace.h  types.cpp  types.h  utils.cpp  utils.h  visitor.h
test/: .gitignore  CMakeLists.txt  testrunner.cpp
test/Basic/: randtest.pas
test/expected/Basic/: calcwords.tpl  hungrymouse.tpl  randtest.tpl
